--- a/clientside-form-validation/index.html
+++ b/clientside-form-validation/index.html
@@ -17,14 +17,14 @@
     <form class="form" id="form">
         <div class="form-control">
             <label for="">Username</label>
-            <input type="text" placeholder="ecemgo" id="username">
+            <input type="text" placeholder="username" id="username">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>Error message</small>
         </div>
         <div class="form-control">
             <label for="">Email</label>
-            <input type="email" placeholder="youremail@gmail.com" id="email">
+            <input type="email" placeholder="info@email.com" id="email">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>Error message</small>
@@ -38,7 +38,7 @@
         </div>
         <div class="form-control">
             <label for="">Password check</label>
-            <input type="password" placeholder="Password two" id="password2">
+            <input type="password" placeholder="Same Password" id="password2">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>Error message</small>
