added animation & uploaded readme

--- a/clientside-form-validation/index.html
+++ b/clientside-form-validation/index.html
@@ -37,14 +37,17 @@
             <small>Error message</small>
         </div>
         <div class="form-control">
-            <label for="">Password check</label>
-            <input type="password" placeholder="Same Password" id="password2">
+            <label for="">Confirm Password</label>
+            <input type="password" placeholder="Confirm Password" id="confirmpassword">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>Error message</small>
         </div>
         <button>Submit</button>
     </form>
+    <div class="message hidden">
+        <p>Submitted! 🎉</p>
+    </div>
   </div>
 
 <script src="app.js"></script>
