--- a/responsive-navbar-background-video/index.html
+++ b/responsive-navbar-background-video/index.html
@@ -12,18 +12,11 @@
   </head>
   <body>
     <video autoplay loop muted plays-inline class="background-video">
-      <source
-        src="https://github.com/ecemgo/today-i-learned-app/assets/13468728/308c08db-a689-482a-964c-685dcecc284d"
-        type="video/mp4" />
+      <source src="images/the-north.mp4" type="video/mp4" />
     </video>
 
     <header>
-      <a href="#"
-        ><img
-          src="https://github.com/ecemgo/today-i-learned-app/assets/13468728/4f2923ea-9eca-4221-8b18-7198f78fd04e"
-          alt="logo"
-          class="logo"
-      /></a>
+      <a href="#"><img src="images/logo.png" alt="logo" class="logo" /></a>
 
       <input type="checkbox" id="check" />
       <label for="check" class="icons">
