updated background-size and background-position

--- a/card-hover-effect-animated-text/index.html
+++ b/card-hover-effect-animated-text/index.html
@@ -20,9 +20,8 @@
               <p>Maggie Thomson</p>
             </span>
             <span class="links">
-                <a href="#"><i class="fas fa-heart"></i></a>
-				<a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-				<a href="https://images.unsplash.com/photo-1614481327033-68e5df399653?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1908&q=80" target="_blank"><i class="fas fa-share"></i></a>
+              <a href="#"><i class="fas fa-heart"></i></a>
+				      <a href="https://images.unsplash.com/photo-1614481327033-68e5df399653?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1908&q=80" target="_blank"><i class="fas fa-arrow-up-right-from-square"></i></a>
             </span>
           </figcaption>
         </figure>
