--- a/draggable-image-slider/index.html
+++ b/draggable-image-slider/index.html
@@ -1,32 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
     <title>Draggable Image Slider</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrapper">
+      <div class="carousel">
+        <img
+          src="https://github.com/ecemgo/frontend-mentor-challenges/assets/13468728/22da6499-0441-4ba8-a00b-687fe9afb5c4"
+          alt=""
+          draggable="false" />
+        <img
+          src="https://github.com/ecemgo/frontend-mentor-challenges/assets/13468728/5f8c6cad-d54b-440e-a3d2-3e4b28b256d9"
+          alt=""
+          draggable="false" />
+        <img
+          src="https://github.com/ecemgo/frontend-mentor-challenges/assets/13468728/97955eee-2d76-4a04-89eb-5447d3a19cb1"
+          alt=""
+          draggable="false" />
+        <img
+          src="https://github.com/ecemgo/frontend-mentor-challenges/assets/13468728/3f0ff493-d47f-4e53-a329-c20cdb77d742"
+          alt=""
+          draggable="false" />
+        <img
+          src="https://github.com/ecemgo/frontend-mentor-challenges/assets/13468728/32018825-70f9-40d3-91c0-e494e033db85"
+          alt=""
+          draggable="false" />
+        <img
+          src="https://github.com/ecemgo/frontend-mentor-challenges/assets/13468728/c33af42b-755b-457a-ad80-827d8b64b0fd"
+          alt=""
+          draggable="false" />
+        <img
+          src="https://github.com/ecemgo/frontend-mentor-challenges/assets/13468728/197d4578-c328-43ce-90e4-36a74227dd3e"
+          alt=""
+          draggable="false" />
+        <img
+          src="https://github.com/ecemgo/frontend-mentor-challenges/assets/13468728/790c8690-aaa6-4898-b1fb-3264143a13d7"
+          alt=""
+          draggable="false" />
+        <img
+          src="https://github.com/ecemgo/frontend-mentor-challenges/assets/13468728/82e3ce91-06ba-472a-9f4a-6d3b215ed7ea"
+          alt=""
+          draggable="false" />
+      </div>
+      <div class="arrows">
         <i id="left" class="fa-solid fa-angle-left"></i>
-        <div class="carousel">
-            
-            <img src="images/pawel-czerwinski-7FqOISWr5V0-unsplash.jpg" alt="" draggable="false">
-            <img src="images/mo-DP0LMBAIzZQ-unsplash.jpg" alt="" draggable="false">
-            <img src="images/mo-h1ihpQnDzoI-unsplash.jpg" alt="" draggable="false">
-            <img src="images/shubham-dhage-rzqjQjGvOBQ-unsplash.jpg" alt="" draggable="false">
-            <img src="images/sebastian-svenson-LpbyDENbQQg-unsplash.jpg" alt="" draggable="false">
-            <img src="images/shubham-dhage-50GSjnC7qXw-unsplash.jpg" alt="" draggable="false">
-            <img src="images/shubham-dhage-PACWvLRNzj8-unsplash.jpg" alt="" draggable="false">
-            <img src="images/milad-fakurian-PGdW_bHDbpI-unsplash.jpg" alt="" draggable="false">
-            <img src="images/javier-miranda-xB2XP29gn10-unsplash.jpg" alt="" draggable="false">
-        </div>
         <i id="right" class="fa-solid fa-angle-right"></i>
-
+      </div>
     </div>
 
-<script src="app.js"></script>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
