added linear gradient background

--- a/simple-parallax-scrolling/index.html
+++ b/simple-parallax-scrolling/index.html
@@ -29,7 +29,7 @@
     </section>
 
     <section class="blog">
-      <h2>Parallax Scrolling Website</h2>
+      <h2>Parallax Scrolling</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero
         architecto, iste praesentium iure doloremque laudantium? Hic, recusandae
