updated width and padding

--- a/parallax-effect/index.html
+++ b/parallax-effect/index.html
@@ -93,10 +93,7 @@
 
       <p>
         Join us at Sunset Paradise and let the magic of the beach whisk you away
-        to a world of sun, sea, and smiles! Book now and experience the paradise
-        you've always imagined. Don't miss your chance to make Sunset Paradise
-        your next beachfront escape. We can't wait to welcome you to our slice
-        of paradise! 🏝️✨
+        to a world of sun, sea, and smiles! 🏝️✨
       </p>
     </section>
 
