--- a/collage-art/index.html
+++ b/collage-art/index.html
@@ -27,13 +27,13 @@
 
       <div class="card-container">
         <div style="--r: -15; --y: 40; --x: 50" class="card">
-          <img src="images/12.webp" alt="" />
+          <img src="images/12.jpg" alt="" />
         </div>
         <div style="--r: 5; --y: -30; --x: 30" class="card">
-          <img src="images/13.webp" alt="" />
+          <img src="images/13.jpg" alt="" />
         </div>
         <div style="--r: 15; --y: 50; --x: 0" class="card">
-          <img src="images/14.webp" alt="" />
+          <img src="images/14.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -43,23 +43,21 @@
       <h1 class="featured-title">Featured</h1>
       <div class="grid-area">
         <div class="item art-one">
-          <img src="images/a-good-boy.webp" alt="A Good Boy" />
+          <img src="images/a-good-boy.jpg" alt="A Good Boy" />
           <!-- <div class="overlay">
             <h3>A Good Boy</h3>
           </div> -->
         </div>
 
         <div class="item art-two">
-          <img src="images/city-life.webp" alt="City Life" />
+          <img src="images/city-life.jpg" alt="City Life" />
           <!-- <div class="overlay">
             <h3>City Life</h3>
           </div> -->
         </div>
 
         <div class="item art-three">
-          <img
-            src="images/an-ode-to-mushrooms.webp"
-            alt="An Ode to Mushrooms" />
+          <img src="images/an-ode-to-mushrooms.jpg" alt="An Ode to Mushrooms" />
           <!-- <div class="overlay">
             <h3>An Ode to Mushrooms</h3>
           </div> -->
@@ -67,7 +65,7 @@
 
         <div class="item art-four">
           <img
-            src="images/the-woman-among-cubism.webp"
+            src="images/the-woman-among-cubism.jpg"
             alt="The Woman Among Cubism" />
           <!-- <div class="overlay">
             <h3>The Woman Among Cubism</h3>
@@ -75,44 +73,42 @@
         </div>
 
         <div class="item art-five">
-          <img src="images/steampunk.webp" alt="Steampunk" />
+          <img src="images/steampunk.jpg" alt="Steampunk" />
           <!-- <div class="overlay">
             <h3>Steampunk</h3>
           </div> -->
         </div>
 
         <div class="item art-six">
-          <img src="images/dragon-in-silks.webp" alt="Dragon in Silks" />
+          <img src="images/dragon-in-silks.jpg" alt="Dragon in Silks" />
           <!-- <div class="overlay">
             <h3>Dragon in Silks</h3>
           </div> -->
         </div>
 
         <div class="item art-seven">
-          <img src="images/cut-n-paste-face.webp" alt="Cut and Paste Face" />
+          <img src="images/cut-n-paste-face.jpg" alt="Cut and Paste Face" />
           <!-- <div class="overlay">
             <h3>Cut and Paste Face</h3>
           </div> -->
         </div>
 
         <div class="item art-eight">
-          <img
-            src="images/dolphins-in-the-sea.webp"
-            alt="Dolphins in the Sea" />
+          <img src="images/dolphins-in-the-sea.jpg" alt="Dolphins in the Sea" />
           <!-- <div class="overlay">
             <h3>Dolphins in the Sea</h3>
           </div> -->
         </div>
 
         <div class="item art-nine">
-          <img src="images/ravens-song.webp" alt="Raven's Song" />
+          <img src="images/ravens-song.jpg" alt="Raven's Song" />
           <!-- <div class="overlay">
             <h3>Raven's Song</h3>
           </div> -->
         </div>
 
         <div class="item art-ten">
-          <img src="images/haunted-house.webp" alt="Haunted House" />
+          <img src="images/haunted-house.jpg" alt="Haunted House" />
           <!-- <div class="overlay">
             <h3>Haunted House</h3>
           </div> -->
@@ -120,7 +116,7 @@
 
         <div class="item art-eleven">
           <img
-            src="images/the-world-of-butterflies.webp"
+            src="images/the-world-of-butterflies.jpg"
             alt="The World of Butterflies" />
           <!-- <div class="overlay">
             <h3>The World of Butterflies</h3>
@@ -128,7 +124,7 @@
         </div>
 
         <div class="item art-twelve">
-          <img src="images/lost-in-thought.webp" alt="Lost in Thought" />
+          <img src="images/lost-in-thought.jpg" alt="Lost in Thought" />
           <!-- <div class="overlay">
             <h3>Lost in Thought</h3>
           </div> -->
