--- a/card-hover-effect/index.html
+++ b/card-hover-effect/index.html
@@ -1,45 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="particles-js" class="particles"></div>
     <main>
-        <div class="card">
-            <img src="images/1.jpg" alt="">
-            <div class="info">
-                <h1>Heading</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus minus incidunt id!</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
+      <div class="card">
+        <img src="images/1.jpg" alt="" />
+        <div class="info">
+          <h1>Fresh Flavors</h1>
+          <p>
+            The farm isn't just a place to work; it's like a big, green friend
+            that provides delicious fruits and vegetables. You enjoy meals made
+            from fresh, local goodies. It's all about keeping things simple,
+            tasty, and connected to the land.
+          </p>
+          <button>Read More</button>
         </div>
+      </div>
 
-        <div class="card">
-            <img src="images/2.jpg" alt="">
-            <div class="info">
-                <h1>Heading</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus minus incidunt id!</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
+      <div class="card">
+        <img src="images/2.jpg" alt="" />
+        <div class="info">
+          <h1>Whispers of Nature</h1>
+          <p>
+            In the countryside, plants are like the storytellers of the
+            landscape, each one with its own tale to tell. Simple pleasures come
+            from watching plants grow and change with the seasons. The beauty of
+            plants is a constant reminder of the rhythm of life in the country.
+          </p>
+          <button>Read More</button>
         </div>
+      </div>
 
-        <div class="card">
-            <img src="images/5.jpg" alt="">
-            <div class="info">
-                <h1>Heading</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus minus incidunt id!</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
+      <div class="card">
+        <img src="images/3.jpg" alt="" />
+        <div class="info">
+          <h1>Countryside Harmony</h1>
+          <p>
+            Life in the countryside follows a rhythmic routine. When the sun
+            comes up, farmers take care of their fields and they are growing
+            rows of crops that dance in the breeze. The good things that come
+            from the land are a happy celebration of how much nature gives us.
+          </p>
+          <button>Read More</button>
         </div>
+      </div>
     </main>
-</body>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
