--- a/clientside-form-validation/index.html
+++ b/clientside-form-validation/index.html
@@ -4,42 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Client-side Form Validation</title>
+    <title>Form Validation</title>
   </head>
   <body>
-    <div class="container">
-      <div class="header">
-        <h2>Create Account</h2>
-      </div>
+    <section>
+      <h1 class="title">Registration Form</h1>
 
-      <form class="form" id="form">
-        <div class="form-control">
+      <form id="form">
+        <div class="input-control">
           <label for="">Username</label>
           <input type="text" placeholder="username" id="username" />
           <i class="fas fa-check-circle"></i>
           <i class="fas fa-exclamation-circle"></i>
           <small>Error message</small>
         </div>
-        <div class="form-control">
+
+        <div class="input-control">
           <label for="">Email</label>
           <input type="email" placeholder="info@email.com" id="email" />
           <i class="fas fa-check-circle"></i>
           <i class="fas fa-exclamation-circle"></i>
           <small>Error message</small>
         </div>
-        <div class="form-control">
+
+        <div class="input-control">
           <label for="">Password</label>
           <input type="password" placeholder="password" id="password" />
           <i class="fas fa-check-circle"></i>
           <i class="fas fa-exclamation-circle"></i>
           <small>Error message</small>
         </div>
-        <div class="form-control">
+
+        <div class="input-control">
           <label for="">Confirm Password</label>
           <input
             type="password"
@@ -49,12 +49,14 @@
           <i class="fas fa-exclamation-circle"></i>
           <small>Error message</small>
         </div>
+
         <button>Submit</button>
       </form>
+
       <div class="message hidden">
-        <p>Submitted! 🎉</p>
+        <p>Submitted succesfully!🎉</p>
       </div>
-    </div>
+    </section>
 
     <script src="app.js"></script>
   </body>
