fixed the mismatch problem

--- a/card-effect/index.html
+++ b/card-effect/index.html
@@ -23,67 +23,96 @@
           </p>
           <button class="btn">Join</button>
         </div>
-        <div class="swiper mySwiper">
+        <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <span>8.5</span>
-              <div>
+              <img
+                src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/b6f5eb64-887c-43b1-aaba-d52a4c59a379"
+                alt="" />
+              <div class="overlay">
+                <span>8.5</span>
                 <h2>The Queen's Gambit</h2>
               </div>
             </div>
 
             <div class="swiper-slide">
-              <span>9.5</span>
-              <div>
+              <img
+                class="img-position"
+                src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/e906353b-fde0-4518-9a03-16545c1161bd"
+                alt="" />
+              <div class="overlay">
+                <span>9.5</span>
                 <h2>Breaking Bad</h2>
               </div>
             </div>
 
             <div class="swiper-slide">
-              <span>8.1</span>
-              <div>
+              <img
+                src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/fc21e481-e28a-41a8-9db3-3b62c1ddc17e"
+                alt="" />
+              <div class="overlay">
+                <span>8.1</span>
                 <h2>Wednesday</h2>
               </div>
             </div>
 
             <div class="swiper-slide">
-              <span>8.7</span>
-              <div>
+              <img
+                src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/6b6ad966-79e1-4d3c-8f92-566d0fee8082"
+                alt="" />
+              <div class="overlay">
+                <span>8.7</span>
                 <h2>Stranger Things</h2>
               </div>
             </div>
 
             <div class="swiper-slide">
-              <span>8.6</span>
-              <div>
+              <img
+                src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/2ad44f5d-2215-4416-9c9b-2bae3be51a67"
+                alt="" />
+              <div class="overlay">
+                <span>8.6</span>
                 <h2>Anne with an E</h2>
               </div>
             </div>
 
             <div class="swiper-slide">
-              <span>8.9</span>
-              <div>
+              <img
+                src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/aa8fe914-741f-4bf4-ad4a-24f19d1f4178"
+                alt="" />
+              <div class="overlay">
+                <span>8.9</span>
                 <h2>Friends</h2>
               </div>
             </div>
 
             <div class="swiper-slide">
-              <span>8.6</span>
-              <div>
+              <img
+                class="img-position"
+                src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/d5f10b4f-7d34-45bd-bb5f-5f1530c2ac1c"
+                alt="" />
+              <div class="overlay">
+                <span>8.6</span>
                 <h2>The Crown</h2>
               </div>
             </div>
 
             <div class="swiper-slide">
-              <span>8.7</span>
-              <div>
+              <img
+                src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/7cbac263-7c55-4428-908e-31018dc1bce3"
+                alt="" />
+              <div class="overlay">
+                <span>8.7</span>
                 <h2>House M.D.</h2>
               </div>
             </div>
 
             <div class="swiper-slide">
-              <span>9.2</span>
-              <div>
+              <img
+                src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/2929f534-3bc3-4cbd-b84c-80df863d5a38"
+                alt="" />
+              <div class="overlay">
+                <span>9.2</span>
                 <h2>Game of Thrones</h2>
               </div>
             </div>
