deleted unused classes

--- a/responsive-slider-with-scrollbar/index.html
+++ b/responsive-slider-with-scrollbar/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Project</title>
+    <title>Responsive Slider with Scrollbar</title>
   </head>
   <body>
     <section id="recipes">
@@ -54,7 +54,7 @@
                     id="post1"
                     data-visible="false"
                     aria-hidden="true">
-                    <ul role="list" class="grid-flow" data-spacing="small">
+                    <ul role="list" data-spacing="small">
                       <li>
                         <a class="post-actions-link" href="javascript:void(0)">
                           <i class="fa-solid fa-folder-open"></i>
@@ -108,7 +108,7 @@
                     id="post2"
                     data-visible="false"
                     aria-hidden="true">
-                    <ul role="list" class="grid-flow" data-spacing="small">
+                    <ul role="list" data-spacing="small">
                       <li>
                         <a class="post-actions-link" href="javascript:void(0)">
                           <i class="fa-solid fa-folder-open"></i>
@@ -162,7 +162,7 @@
                     id="post3"
                     data-visible="false"
                     aria-hidden="true">
-                    <ul role="list" class="grid-flow" data-spacing="small">
+                    <ul role="list" data-spacing="small">
                       <li>
                         <a class="post-actions-link" href="javascript:void(0)">
                           <i class="fa-solid fa-folder-open"></i>
@@ -216,7 +216,7 @@
                     id="post4"
                     data-visible="false"
                     aria-hidden="true">
-                    <ul role="list" class="grid-flow" data-spacing="small">
+                    <ul role="list" data-spacing="small">
                       <li>
                         <a class="post-actions-link" href="javascript:void(0)">
                           <i class="fa-solid fa-folder-open"></i>
@@ -270,7 +270,7 @@
                     id="post5"
                     data-visible="false"
                     aria-hidden="true">
-                    <ul role="list" class="grid-flow" data-spacing="small">
+                    <ul role="list" data-spacing="small">
                       <li>
                         <a class="post-actions-link" href="javascript:void(0)">
                           <i class="fa-solid fa-folder-open"></i>
@@ -327,7 +327,7 @@
                     id="post6"
                     data-visible="false"
                     aria-hidden="true">
-                    <ul role="list" class="grid-flow" data-spacing="small">
+                    <ul role="list" data-spacing="small">
                       <li>
                         <a class="post-actions-link" href="javascript:void(0)">
                           <i class="fa-solid fa-folder-open"></i>
