updated code for the mobile size

--- a/testimonial-slider-v1/index.html
+++ b/testimonial-slider-v1/index.html
@@ -16,10 +16,10 @@
     <main>
       <h1>Testimonials</h1>
 
-      <div class="testimonial">
-        <div class="slide-row" id="slide">
+      <div class="slider">
+        <div class="slide-row" id="slide-row">
           <div class="slide-col">
-            <div class="user-text">
+            <div class="content">
               <p>
                 Zen Doan is a business analyst, entrepreneur and media
                 proprietor, and investor. She also known as the best selling
@@ -28,13 +28,13 @@
               <h2>Zen</h2>
               <p>Author</p>
             </div>
-            <div class="user-img">
+            <div class="hero">
               <img src="images/zen-doan.jpg" alt="avatar" />
             </div>
           </div>
 
           <div class="slide-col">
-            <div class="user-text">
+            <div class="content">
               <p>
                 Jonathan Koletic is an American internet entrepreneur and media
                 proprietor, and investor. He is the founder of the
@@ -43,13 +43,13 @@
               <h2>Jonathan</h2>
               <p>Treymont Inc.</p>
             </div>
-            <div class="user-img">
+            <div class="hero">
               <img src="images/jon-koletic.jpg" alt="avatar" />
             </div>
           </div>
 
           <div class="slide-col">
-            <div class="user-text">
+            <div class="content">
               <p>
                 Charlie Green is an European entrepreneur and media consultant,
                 and investor. He is the founder of the Hallmark Inc.
@@ -57,13 +57,13 @@
               <h2>Charlie</h2>
               <p>Hallmark Inc.</p>
             </div>
-            <div class="user-img">
+            <div class="hero">
               <img src="images/charlie-green.jpg" alt="avatar" />
             </div>
           </div>
 
           <div class="slide-col">
-            <div class="user-text">
+            <div class="content">
               <p>
                 Sarah Dam is an American internet entrepreneur and media
                 proprietor, and investor. She is the founder of the
@@ -72,7 +72,7 @@
               <h2>Sarah</h2>
               <p>Zara Inc.</p>
             </div>
-            <div class="user-img">
+            <div class="hero">
               <img src="images/sara-dam.jpg" alt="avatar" />
             </div>
           </div>
@@ -87,6 +87,6 @@
       </div>
     </main>
 
-    <script src="main.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
