removed updateTheme() and initialTheme() functions

--- a/event-dashboard/index.html
+++ b/event-dashboard/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Event Dashboard</title>
   </head>
-  <body>
+  <body class="darkmode">
     <nav class="main-menu">
       <div>
         <div class="user-info">
@@ -107,7 +107,7 @@
         </div>
 
         <div class="header">
-          <picture class="morning-img">
+          <picture class="morning-img hidden">
             <img
               class="header-mobile"
               src="images/event-day-mobile.png"
@@ -119,7 +119,7 @@
             <img class="header-desktop" src="images/event-day.png" alt="" />
           </picture>
 
-          <picture class="night-img hidden">
+          <picture class="night-img">
             <img
               class="header-mobile"
               src="images/event-night-mobile.png"
