--- a/mentorship-landing-page/index.html
+++ b/mentorship-landing-page/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Project</title>
+    <title>Mentorship Landing Page</title>
   </head>
   <body>
     <section class="home">
@@ -167,11 +167,11 @@
       </div>
 
       <ul class="control" id="custom-control">
-        <li class="prev">
-          <ion-icon class="arrow" name="caret-back-outline"></ion-icon>
+        <li>
+          <ion-icon name="caret-back-outline"></ion-icon>
         </li>
-        <li class="next">
-          <ion-icon class="arrow" name="caret-forward-outline"></ion-icon>
+        <li>
+          <ion-icon name="caret-forward-outline"></ion-icon>
         </li>
       </ul>
     </section>
