--- a/testimonial-slider-v1/index.html
+++ b/testimonial-slider-v1/index.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap"
-      rel="stylesheet" />
-    <title>Testimonial Slider</title>
+    <title>Responsive Slider with Vanilla Javascript</title>
   </head>
   <body>
     <main>
