set the pointer-events and hover effects

--- a/music-app-dashboard/index.html
+++ b/music-app-dashboard/index.html
@@ -143,42 +143,58 @@
             <h1>Featured Artists</h1>
             <div class="artist-container containers">
               <div class="artist">
-                <img src="images/artists/taylor-swift.jpg" alt="" />
+                <div class="artist-img-container">
+                  <img src="images/artists/taylor-swift.jpg" alt="" />
+                </div>
                 <p>Taylor Swift</p>
               </div>
 
               <div class="artist">
-                <img src="images/artists/the-weeknd.jpg" alt="" />
+                <div class="artist-img-container">
+                  <img src="images/artists/the-weeknd.jpg" alt="" />
+                </div>
                 <p>The Weeknd</p>
               </div>
 
               <div class="artist">
-                <img src="images/artists/dua-lipa.jpg" alt="" />
+                <div class="artist-img-container">
+                  <img src="images/artists/dua-lipa.jpg" alt="" />
+                </div>
                 <p>Dua Lipa</p>
               </div>
 
               <div class="artist">
-                <img src="images/artists/jimin.jpg" alt="" />
+                <div class="artist-img-container">
+                  <img src="images/artists/jimin.jpg" alt="" />
+                </div>
                 <p>Jimin</p>
               </div>
 
               <div class="artist">
-                <img src="images/artists/alicia-keys.jpg" alt="" />
+                <div class="artist-img-container">
+                  <img src="images/artists/alicia-keys.jpg" alt="" />
+                </div>
                 <p>Alicia Keys</p>
               </div>
 
               <div class="artist">
-                <img src="images/artists/maroon-5.jpg" alt="" />
+                <div class="artist-img-container">
+                  <img src="images/artists/maroon-5.jpg" alt="" />
+                </div>
                 <p>Maroon 5</p>
               </div>
 
               <div class="artist">
-                <img src="images/artists/imagine-dragons.jpg" alt="" />
+                <div class="artist-img-container">
+                  <img src="images/artists/imagine-dragons.jpg" alt="" />
+                </div>
                 <p>Imagine Dragons</p>
               </div>
 
               <div class="artist">
-                <img src="images/artists/billie-eilish.jpg" alt="" />
+                <div class="artist-img-container">
+                  <img src="images/artists/billie-eilish.jpg" alt="" />
+                </div>
                 <p>Billie Eilish</p>
               </div>
             </div>
